--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,20 @@
 --grey:#2F303A;
 --teal:#757575;
 }
+
 body{
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     color: var(--teal);
 }
+
 .head{
     border: 1px solid #ECECEC;
     display: flex;
     height: 80px;
     align-items: center;
 }
+
 .container{
     width: 1200px;
     padding: 0 15px;
@@ -26,6 +29,7 @@ body{
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .d-flex{
     display: flex; 
 }
@@ -38,6 +42,7 @@ body{
     font-size: 26px;
     color: var(--blue);
 }
+
 .studio{
     text-decoration: none;
     color: var(--black);
@@ -61,16 +66,20 @@ body{
 .list-itam >a{
     color: #212121;
 }
+
 .list-itam > a:hover,
 .list-itam > a:focus{
     color: var(--blue);
 }
+
 .list-itam > .selected{
     color: var(--blue);
 }
+
 .list-itam:not(:last-child){
     margin-right:50px;
 }
+
 .contacts{
     display: flex;
     align-items: center;
@@ -84,6 +93,7 @@ body{
     color: var(--teal);
     margin-right: 50px;
 }
+
 .mail::before{
     content: "";
     background-image: url(../images/mail.svg);
@@ -94,9 +104,11 @@ body{
     height: 12px;
     margin-right: 10px;
 }
+
 .tel{
     color: var(--teal);
 }
+
 .tel::before{
     content: "";
     background-image: url(../images/tell.svg);
@@ -109,20 +121,24 @@ body{
     
  
 }
+
 .mail:hover,
 .mail:focus{ 
     cursor: pointer;
     color: var(--blue);
 }
+
 .tel:hover,
 .tel:focus{
     cursor: pointer;
     color: var(--blue);
 }
+
 .title{
     background-color: var(--grey);
     padding: 200px 482px 280px;
 }
+
 .title{
     background-image: linear-gradient(
     to right,
@@ -132,11 +148,13 @@ body{
     background-position: center;
     background-size:cover;
 }
+
 .hero{
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .title-h1{
     width: 696px;
     font-weight: 900;
@@ -146,6 +164,7 @@ body{
     color: #FFFFFF;
     text-align: center;
 }
+
 .button{
     margin-top: 30px;
     width: 216px;
@@ -159,10 +178,12 @@ body{
     border-radius: 4px;
     border: 0px;
 }
+
 .button:focus,
 .button:hover{
     cursor: pointer;
 }
+
 .title-list{
     font-weight: 700;
     font-size: 14px;
@@ -170,6 +191,7 @@ body{
     line-height: 1.14;
     color: #212121;;
 }
+
 .title-list-itam{
     margin-top: 10px;
     font-size: 14px;
@@ -207,6 +229,7 @@ body{
 .about-item:not(:last-child){
     margin-right: 30px;
 }
+
 .title-h2{
     padding-bottom: 50px;
     display:block;
@@ -216,30 +239,34 @@ body{
     color: #212121;
     text-align: center;
 }
+
 .doing-item:not(:last-child){
     margin-right: 30px;
 }
+
 .doing-item{
     padding-bottom: 94px;
-    
 }
+
 .team-itam{
     background-color: #FFFFFF;;
     width: 270px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;       
 }
+
 .team{
     justify-content: center;
 }
+
 .team-itam:not(:last-child){
     margin-right: 30px;
 }
+
 .team-section{
-    
-    background-color: #F5F4FA;
-    
+    background-color: #F5F4FA; 
 }
+
 .list-comand{
     margin-top: 30px;
     font-weight: 500;
@@ -257,131 +284,113 @@ body{
     text-align: center;
 }
 
-.fon-instagram{
+.link{
     display: inline-flex;
-    content: "";
-    margin-left: 32px;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    margin-bottom: 30px;
+    border-radius: 50%;
+    color: #AFB1B8;;
+}
+
+.link-icon{
+    margin-top: 12px;
+    margin-left: 12px;
+    margin-right: 12px;
+    fill: currentColor;
+}
+
+.link:hover{
+    color: #FFFFFF;
+    background-color: #2196F3;
+}
+
+
+.link:not(:last-child){
     margin-right: 10px;
-    margin-bottom: 30px;
-    width: 44px;
-    height: 44px;
-    background-image: url(../images/instagram.svg);
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
-.fon-twitter{
-    display: inline-flex;
-    content: "";
-    width: 44px;
-    height: 44px;
-    margin-bottom: 30px;
-    background-image: url(../images/twiter.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.fon-facebook{
-    display: inline-flex;
-    content: "";
-    width: 44px;
-    height: 44px;
-    margin-bottom: 30px;
-    background-image: url(../images/facebook.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.fon-linkedin{
-    display: inline-flex;
-    content: "";
-    width: 44px;
-    height: 44px;
-    margin-bottom: 30px;
-    background-image: url(../images/linkedin.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-}
 
 .company{
     justify-content: center;
 }
 
-.company:focus,
-.company:hover{
-    cursor: pointer;
-    color: var(--blue);
-}
-
 .company-yago{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
     margin-right: 30px;
-    background-image: url(../images/yago.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.company-yago:hover{
+    cursor: pointer;
+fill:  #2196F3;
+border: 1px solid #2196F3;
 }
 
 .company-taglinehear{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
     margin-right: 30px;
-    background-image: url(../images/tagline.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.company-taglinehear:hover{
+cursor: pointer;
+fill: #2196F3;
+    border: 1px solid #2196F3;
 }
 
 .company-com{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
     margin-right: 30px;
-    background-image: url(../images/company.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.company-com:hover{
+cursor: pointer;
+    fill: #2196F3;
+    border: 1px solid #2196F3;
 }
 
 .company-foster{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
     margin-right: 30px;
-    background-image: url(../images/Fosterpeters.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.company-foster:hover{
+    cursor: pointer;
+        fill: #2196F3;
+        border: 1px solid #2196F3;
 }
 
 .brand{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
     margin-right: 30px;
-    background-image: url(../images/brand.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.brand:hover{
+cursor: pointer;
+    fill: #2196F3;
+    border: 1px solid #2196F3;
 }
 
 .tagline{
-    content: "";
     border-radius: 4px;
     border: 1px solid #AFB1B8;
-    width: 170px;
-    height: 92px;
-    background-image: url(../images/tagline.svg);
-    background-position: center;
-    background-repeat: no-repeat;
+    fill: #AFB1B8;
+}
+
+.tagline:hover{
+cursor: pointer;
+    fill: #2196F3;
+    border: 1px solid #2196F3;
 }
 
 .footer{
@@ -389,6 +398,7 @@ body{
     height: 252px;
     background-color: var(--grey);
 }
+
 .adres-footer{
     display:inline-block;
     padding-top: 20px;
@@ -437,23 +447,28 @@ body{
     border-radius: 4px;
     background-color: var(--blue);
 }
+
 .li-title{
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     color: #212121;;
 }
+
 .li-span{
     font-size: 16px;
     line-height: 1.87;
 }
+
 .studio-bottom{
     color: #FFFFFF;
 }
+
 .prtf-list{
     flex-wrap: wrap;
     margin: -15px;
 }
+
 .prtf-list > li{
     margin: 15px;
 }
